# resp32

./: .gitignore  BUILD.md  CMakeLists.txt  MIGRATION_SUMMARY.md  QUICK_START.md  README.md  README_ESPIDF.md  idf_component.yml  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.old
include/: lwip_compat.h  sdkconfig.h  sdkconfig.h.backup
lib/WiFi/: README.md  library.json
lib/WiFi/src/: WiFiAP.cpp  WiFiGeneric.cpp  WiFiSTA.cpp
main/: CMakeLists.txt  idf_component.yml
main/src/: camera_pins.h  main.c  wifi_provisioning.c
src/: CameraWebServer_AP.cpp  CameraWebServer_AP.h  ESP32_CameraServer_AP_20220120.ino  app_httpd.cpp  app_httpd.h  camera_server.c  camera_server.h  robot_control.c  socket_server.c  socket_server.h  wifi_provisioning.c
src/main/: CMakeLists.txt  idf_component.yml  main.c
src_bak/: robot_control.h  wifi_provisioning.h
