idf_component_register(
    SRCS 
        "main.c"
    INCLUDE_DIRS 
        "."
        ".."
        "../include"
    PRIV_REQUIRES 
        esp_wifi
        esp_netif
        nvs_flash
        esp_http_server
        driver
        wifi_provisioning
        bt
        esp_timer
        lwip
    REQUIRES
        esp32-camera
    COMPILE_OPTIONS
        -DCAMERA_MODEL_WROVER_KIT
)

